--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "autoprefixer": "^10",
     "core-js": "^3.8.3",
+    "date-fns": "^2.28.0",
     "firebase": "^8.2.3",
     "postcss": "^8",
     "tailwindcss": "^3",
